--- a/tiktok-verification.html
+++ b/tiktok-verification.html
@@ -5,6 +5,6 @@
     <title>TikTok Verification</title>
 </head>
 <body>
-    <p>TikTok verification page</p>
+    tiktok-developers-site-verification=OeBcV6sNDWMt2LzbiFcPSVwfQYsRgD1n
 </body>
 </html>
