Update TikTok SDK URL to use correct CDN

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Social Media Automation</title>
     <!-- TikTok SDK -->
-    <script src="https://sf16-scmcdn-va.ibytedtos.com/goofy/tiktok/web/js/tiktok-auth.js"></script>
+    <script src="https://sf-tk-sg.ibytedtos.com/obj/static-web/tiktok/tiktok-auth.js"></script>
 </head>
 <body>
     <h1>Social Media Automation</h1>
