--- a/index.html
+++ b/index.html
@@ -2,188 +2,339 @@
 <html>
 <head>
     <title>Social Media Automation</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #7C3AED;
+            --secondary-color: #4338CA;
+            --success-color: #059669;
+            --error-color: #DC2626;
+            --warning-color: #D97706;
+            --background-color: #F3F4F6;
+            --card-background: #FFFFFF;
+            --text-primary: #1F2937;
+            --text-secondary: #6B7280;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            min-height: 100vh;
+            color: var(--text-primary);
         }
+
         .container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 20px;
         }
-        .upload-section {
+
+        .header {
             text-align: center;
-            margin: 40px 0;
+            color: white;
+            margin-bottom: 40px;
         }
-        .progress-section {
-            margin: 20px 0;
-            display: none;
+
+        .header h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
         }
-        .platform-status {
-            margin: 15px 0;
-            padding: 15px;
-            border-radius: 8px;
-            background: #f8f9fa;
+
+        .header p {
+            font-size: 1.1em;
+            opacity: 0.9;
+        }
+
+        .upload-card {
+            background: var(--card-background);
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+
+        .upload-zone {
+            border: 2px dashed var(--primary-color);
+            border-radius: 15px;
+            padding: 40px;
+            text-align: center;
+            cursor: pointer;
             transition: all 0.3s ease;
         }
-        .platform-status.uploading {
-            background: #fff3cd;
+
+        .upload-zone:hover {
+            background: #F9FAFB;
         }
-        .platform-status.success {
-            background: #d4edda;
+
+        .upload-icon {
+            font-size: 48px;
+            color: var(--primary-color);
+            margin-bottom: 15px;
         }
-        .platform-status.error {
-            background: #f8d7da;
+
+        .platform-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
         }
+
+        .platform-card {
+            background: var(--card-background);
+            border-radius: 15px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .platform-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .platform-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+        }
+
+        .platform-icon {
+            font-size: 24px;
+            margin-right: 10px;
+        }
+
         .progress-bar {
-            height: 10px;
-            background: #e9ecef;
-            border-radius: 5px;
-            margin: 10px 0;
+            height: 8px;
+            background: #E5E7EB;
+            border-radius: 4px;
             overflow: hidden;
+            margin: 15px 0;
         }
-        .progress-bar-fill {
+
+        .progress-fill {
             height: 100%;
-            background: #fe2c55;
             width: 0%;
+            border-radius: 4px;
             transition: width 0.3s ease;
         }
-        button {
-            background-color: #fe2c55;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+
+        .progress-fill.uploading {
+            background: linear-gradient(90deg, var(--warning-color), #F59E0B);
         }
-        button:hover {
-            background-color: #e62a4d;
+
+        .progress-fill.success {
+            background: linear-gradient(90deg, var(--success-color), #10B981);
         }
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
+
+        .progress-fill.error {
+            background: linear-gradient(90deg, var(--error-color), #EF4444);
         }
+
+        .status-message {
+            font-size: 0.9em;
+            color: var(--text-secondary);
+        }
+
         .platform-link {
-            color: #0366d6;
+            display: inline-block;
+            margin-top: 10px;
+            color: var(--primary-color);
             text-decoration: none;
+            font-weight: 500;
         }
+
         .platform-link:hover {
             text-decoration: underline;
         }
-        input[type="file"] {
-            margin: 20px 0;
+
+        button {
+            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+            margin-top: 20px;
         }
-        .error-message {
-            color: #dc3545;
-            margin-top: 5px;
+
+        button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        button:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        #file-name {
+            margin-top: 15px;
+            font-size: 0.9em;
+            color: var(--text-secondary);
+        }
+
+        .platform-status.success {
+            border-left: 4px solid var(--success-color);
+        }
+
+        .platform-status.error {
+            border-left: 4px solid var(--error-color);
+        }
+
+        .platform-status.uploading {
+            border-left: 4px solid var(--warning-color);
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        .uploading .platform-icon {
+            animation: pulse 2s infinite;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Social Media Automation</h1>
-        
-        <!-- Upload Section -->
-        <div class="upload-section">
-            <input type="file" id="video-file" accept="video/*" required>
-            <button onclick="uploadVideo()" id="uploadButton">Upload Video</button>
+        <div class="header">
+            <h1>Social Media Automation</h1>
+            <p>Upload once, share everywhere</p>
         </div>
 
-        <!-- Progress Section -->
-        <div class="progress-section" id="progressSection">
-            <h2>Upload Progress</h2>
-            
+        <div class="upload-card">
+            <div class="upload-zone" onclick="document.getElementById('video-file').click()">
+                <i class="fas fa-cloud-upload-alt upload-icon"></i>
+                <h3>Drop your video here</h3>
+                <p>or click to browse</p>
+                <input type="file" id="video-file" accept="video/*" style="display: none" onchange="updateFileName()">
+                <div id="file-name"></div>
+            </div>
+            <button onclick="uploadVideo()" id="uploadButton">
+                <i class="fas fa-upload"></i> Start Upload
+            </button>
+        </div>
+
+        <div class="platform-grid" id="progressSection" style="display: none">
             <!-- YouTube Personal -->
-            <div class="platform-status" id="youtube-personal-status">
-                <h3>YouTube (Personal)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="youtube-personal-progress"></div>
+            <div class="platform-card" id="youtube-personal-status">
+                <div class="platform-header">
+                    <i class="fab fa-youtube platform-icon" style="color: #FF0000"></i>
+                    <h3>YouTube Personal</h3>
                 </div>
-                <p id="youtube-personal-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="youtube-personal-progress"></div>
+                </div>
+                <p class="status-message" id="youtube-personal-message">Ready to upload</p>
             </div>
 
             <!-- YouTube Charity -->
-            <div class="platform-status" id="youtube-charity-status">
-                <h3>YouTube (Charity)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="youtube-charity-progress"></div>
+            <div class="platform-card" id="youtube-charity-status">
+                <div class="platform-header">
+                    <i class="fab fa-youtube platform-icon" style="color: #FF0000"></i>
+                    <h3>YouTube Charity</h3>
                 </div>
-                <p id="youtube-charity-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="youtube-charity-progress"></div>
+                </div>
+                <p class="status-message" id="youtube-charity-message">Ready to upload</p>
             </div>
 
             <!-- Instagram Personal -->
-            <div class="platform-status" id="instagram-personal-status">
-                <h3>Instagram (Personal)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="instagram-personal-progress"></div>
+            <div class="platform-card" id="instagram-personal-status">
+                <div class="platform-header">
+                    <i class="fab fa-instagram platform-icon" style="color: #E4405F"></i>
+                    <h3>Instagram Personal</h3>
                 </div>
-                <p id="instagram-personal-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="instagram-personal-progress"></div>
+                </div>
+                <p class="status-message" id="instagram-personal-message">Ready to upload</p>
             </div>
 
             <!-- Instagram Charity -->
-            <div class="platform-status" id="instagram-charity-status">
-                <h3>Instagram (Charity)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="instagram-charity-progress"></div>
+            <div class="platform-card" id="instagram-charity-status">
+                <div class="platform-header">
+                    <i class="fab fa-instagram platform-icon" style="color: #E4405F"></i>
+                    <h3>Instagram Charity</h3>
                 </div>
-                <p id="instagram-charity-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="instagram-charity-progress"></div>
+                </div>
+                <p class="status-message" id="instagram-charity-message">Ready to upload</p>
             </div>
 
             <!-- TikTok Personal -->
-            <div class="platform-status" id="tiktok-personal-status">
-                <h3>TikTok (Personal)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="tiktok-personal-progress"></div>
+            <div class="platform-card" id="tiktok-personal-status">
+                <div class="platform-header">
+                    <i class="fab fa-tiktok platform-icon" style="color: #000000"></i>
+                    <h3>TikTok Personal</h3>
                 </div>
-                <p id="tiktok-personal-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="tiktok-personal-progress"></div>
+                </div>
+                <p class="status-message" id="tiktok-personal-message">Ready to upload</p>
             </div>
 
             <!-- TikTok Charity -->
-            <div class="platform-status" id="tiktok-charity-status">
-                <h3>TikTok (Charity)</h3>
-                <div class="progress-bar">
-                    <div class="progress-bar-fill" id="tiktok-charity-progress"></div>
+            <div class="platform-card" id="tiktok-charity-status">
+                <div class="platform-header">
+                    <i class="fab fa-tiktok platform-icon" style="color: #000000"></i>
+                    <h3>TikTok Charity</h3>
                 </div>
-                <p id="tiktok-charity-message">Waiting to start...</p>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="tiktok-charity-progress"></div>
+                </div>
+                <p class="status-message" id="tiktok-charity-message">Ready to upload</p>
             </div>
         </div>
     </div>
 
     <script>
+        function updateFileName() {
+            const fileInput = document.getElementById('video-file');
+            const fileName = document.getElementById('file-name');
+            if (fileInput.files.length > 0) {
+                fileName.textContent = fileInput.files[0].name;
+            }
+        }
+
         const platforms = {
-            'youtube_personal': 'YouTube (Personal)',
-            'youtube_charity': 'YouTube (Charity)',
-            'instagram_personal': 'Instagram (Personal)',
-            'instagram_charity': 'Instagram (Charity)',
-            'tiktok_personal': 'TikTok (Personal)',
-            'tiktok_charity': 'TikTok (Charity)'
+            'youtube_personal': 'YouTube Personal',
+            'youtube_charity': 'YouTube Charity',
+            'instagram_personal': 'Instagram Personal',
+            'instagram_charity': 'Instagram Charity',
+            'tiktok_personal': 'TikTok Personal',
+            'tiktok_charity': 'TikTok Charity'
         };
 
         function updateProgress(platform, progress, message, status = 'uploading', url = null) {
             const platformId = platform.replace('_', '-');
-            const statusDiv = document.getElementById(`${platformId}-status`);
+            const card = document.getElementById(`${platformId}-status`);
             const progressBar = document.getElementById(`${platformId}-progress`);
             const messageP = document.getElementById(`${platformId}-message`);
 
             // Update progress bar
             progressBar.style.width = `${progress}%`;
+            progressBar.className = `progress-fill ${status}`;
 
             // Update message
             if (url) {
-                messageP.innerHTML = `${message} <a href="${url}" target="_blank" class="platform-link">View Post</a>`;
+                messageP.innerHTML = `${message} <a href="${url}" target="_blank" class="platform-link">View Post →</a>`;
             } else {
                 messageP.textContent = message;
             }
 
-            // Update status styling
-            statusDiv.className = `platform-status ${status}`;
+            // Update card status
+            card.className = `platform-card ${status}`;
         }
 
         async function uploadVideo() {
@@ -196,15 +347,13 @@
                 return;
             }
 
-            // Show progress section and disable upload button
-            progressSection.style.display = 'block';
+            progressSection.style.display = 'grid';
             uploadButton.disabled = true;
 
             const formData = new FormData();
             formData.append('video', fileInput.files[0]);
 
             try {
-                // First step: Process video
                 updateAllPlatforms(0, 'Processing video...');
                 const processResponse = await fetch('/process-video', {
                     method: 'POST',
@@ -218,7 +367,6 @@
                 const processResult = await processResponse.json();
                 updateAllPlatforms(50, 'Video processed, uploading to platforms...');
 
-                // Second step: Post to all platforms
                 const content = {
                     description: processResult.description,
                     hashtags: processResult.hashtags,
@@ -242,7 +390,6 @@
 
                 const results = await postResponse.json();
 
-                // Update status for each platform
                 Object.entries(results).forEach(([platform, result]) => {
                     if (result.status === 'success') {
                         updateProgress(
