--- a/index.html
+++ b/index.html
@@ -2,58 +2,70 @@
 <html>
 <head>
     <title>Social Media Automation</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #7C3AED;
-            --secondary-color: #4338CA;
-            --success-color: #059669;
+            --primary-color: #D4AF37;
+            --primary-dark: #B4941E;
+            --secondary-color: #1A1A1A;
+            --success-color: #4CAF50;
             --error-color: #DC2626;
-            --warning-color: #D97706;
-            --background-color: #F3F4F6;
-            --card-background: #FFFFFF;
-            --text-primary: #1F2937;
-            --text-secondary: #6B7280;
+            --warning-color: #D4AF37;
+            --background-color: #121212;
+            --card-background: #1A1A1A;
+            --text-primary: #FFFFFF;
+            --text-secondary: #B8B8B8;
+            --gold-gradient: linear-gradient(135deg, #D4AF37, #FFD700, #D4AF37);
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            background: var(--background-color);
+            background-image: 
+                radial-gradient(circle at 100% 0%, rgba(212, 175, 55, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 0% 100%, rgba(212, 175, 55, 0.1) 0%, transparent 50%);
             min-height: 100vh;
             color: var(--text-primary);
         }
 
         .container {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 40px auto;
             padding: 20px;
         }
 
         .header {
             text-align: center;
-            color: white;
-            margin-bottom: 40px;
+            margin-bottom: 60px;
         }
 
         .header h1 {
-            font-size: 2.5em;
+            font-family: 'Playfair Display', serif;
+            font-size: 3.5em;
             margin-bottom: 10px;
+            background: var(--gold-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
 
         .header p {
-            font-size: 1.1em;
-            opacity: 0.9;
+            font-size: 1.2em;
+            color: var(--text-secondary);
+            font-weight: 300;
+            letter-spacing: 1px;
         }
 
         .upload-card {
             background: var(--card-background);
             border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
+            padding: 40px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(212, 175, 55, 0.1);
+            margin-bottom: 40px;
         }
 
         .upload-zone {
@@ -66,7 +78,8 @@
         }
 
         .upload-zone:hover {
-            background: #F9FAFB;
+            background: rgba(212, 175, 55, 0.05);
+            border-color: var(--primary-color);
         }
 
         .upload-icon {
@@ -77,37 +90,47 @@
 
         .platform-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
         }
 
         .platform-card {
             background: var(--card-background);
             border-radius: 15px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-            transition: transform 0.3s ease;
+            padding: 25px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(212, 175, 55, 0.1);
+            transition: all 0.3s ease;
         }
 
         .platform-card:hover {
             transform: translateY(-5px);
+            border-color: rgba(212, 175, 55, 0.3);
         }
 
         .platform-header {
             display: flex;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .platform-icon {
             font-size: 24px;
-            margin-right: 10px;
+            margin-right: 15px;
+            color: var(--primary-color);
+        }
+
+        .platform-header h3 {
+            font-family: 'Playfair Display', serif;
+            font-weight: 600;
+            margin: 0;
+            color: var(--text-primary);
         }
 
         .progress-bar {
             height: 8px;
-            background: #E5E7EB;
+            background: rgba(255, 255, 255, 0.1);
             border-radius: 4px;
             overflow: hidden;
             margin: 15px 0;
@@ -121,20 +144,21 @@
         }
 
         .progress-fill.uploading {
-            background: linear-gradient(90deg, var(--warning-color), #F59E0B);
+            background: var(--gold-gradient);
         }
 
         .progress-fill.success {
-            background: linear-gradient(90deg, var(--success-color), #10B981);
+            background: linear-gradient(90deg, #388E3C, #4CAF50);
         }
 
         .progress-fill.error {
-            background: linear-gradient(90deg, var(--error-color), #EF4444);
+            background: linear-gradient(90deg, #C62828, #DC2626);
         }
 
         .status-message {
             font-size: 0.9em;
             color: var(--text-secondary);
+            margin-top: 10px;
         }
 
         .platform-link {
@@ -143,29 +167,32 @@
             color: var(--primary-color);
             text-decoration: none;
             font-weight: 500;
+            transition: color 0.3s ease;
         }
 
         .platform-link:hover {
-            text-decoration: underline;
+            color: var(--primary-dark);
         }
 
         button {
-            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
-            color: white;
+            background: var(--gold-gradient);
+            color: var(--secondary-color);
             border: none;
-            padding: 12px 24px;
+            padding: 15px 30px;
             border-radius: 8px;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
-            margin-top: 20px;
+            margin-top: 25px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 15px rgba(212, 175, 55, 0.3);
         }
 
         button:disabled {
@@ -192,14 +219,40 @@
             border-left: 4px solid var(--warning-color);
         }
 
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
+        @keyframes shimmer {
+            0% { background-position: -1000px 0; }
+            100% { background-position: 1000px 0; }
         }
 
         .uploading .platform-icon {
             animation: pulse 2s infinite;
+        }
+
+        .upload-zone h3 {
+            font-family: 'Playfair Display', serif;
+            color: var(--primary-color);
+            margin: 15px 0 5px;
+        }
+
+        .upload-zone p {
+            color: var(--text-secondary);
+            margin: 0;
+        }
+
+        /* Platform-specific styles */
+        #youtube-personal-status .platform-icon,
+        #youtube-charity-status .platform-icon {
+            color: #FF0000;
+        }
+
+        #instagram-personal-status .platform-icon,
+        #instagram-charity-status .platform-icon {
+            color: #E4405F;
+        }
+
+        #tiktok-personal-status .platform-icon,
+        #tiktok-charity-status .platform-icon {
+            color: #FFFFFF;
         }
     </style>
 </head>
@@ -207,27 +260,28 @@
     <div class="container">
         <div class="header">
             <h1>Social Media Automation</h1>
-            <p>Upload once, share everywhere</p>
+            <p>Elegantly share your content across platforms</p>
         </div>
 
         <div class="upload-card">
             <div class="upload-zone" onclick="document.getElementById('video-file').click()">
                 <i class="fas fa-cloud-upload-alt upload-icon"></i>
-                <h3>Drop your video here</h3>
-                <p>or click to browse</p>
+                <h3>Upload Your Content</h3>
+                <p>Drag and drop your video or click to browse</p>
                 <input type="file" id="video-file" accept="video/*" style="display: none" onchange="updateFileName()">
                 <div id="file-name"></div>
             </div>
             <button onclick="uploadVideo()" id="uploadButton">
-                <i class="fas fa-upload"></i> Start Upload
+                <i class="fas fa-upload"></i> Begin Upload
             </button>
         </div>
 
         <div class="platform-grid" id="progressSection" style="display: none">
+            <!-- Platform cards remain the same as before -->
             <!-- YouTube Personal -->
             <div class="platform-card" id="youtube-personal-status">
                 <div class="platform-header">
-                    <i class="fab fa-youtube platform-icon" style="color: #FF0000"></i>
+                    <i class="fab fa-youtube platform-icon"></i>
                     <h3>YouTube Personal</h3>
                 </div>
                 <div class="progress-bar">
@@ -239,7 +293,7 @@
             <!-- YouTube Charity -->
             <div class="platform-card" id="youtube-charity-status">
                 <div class="platform-header">
-                    <i class="fab fa-youtube platform-icon" style="color: #FF0000"></i>
+                    <i class="fab fa-youtube platform-icon"></i>
                     <h3>YouTube Charity</h3>
                 </div>
                 <div class="progress-bar">
@@ -251,7 +305,7 @@
             <!-- Instagram Personal -->
             <div class="platform-card" id="instagram-personal-status">
                 <div class="platform-header">
-                    <i class="fab fa-instagram platform-icon" style="color: #E4405F"></i>
+                    <i class="fab fa-instagram platform-icon"></i>
                     <h3>Instagram Personal</h3>
                 </div>
                 <div class="progress-bar">
@@ -263,7 +317,7 @@
             <!-- Instagram Charity -->
             <div class="platform-card" id="instagram-charity-status">
                 <div class="platform-header">
-                    <i class="fab fa-instagram platform-icon" style="color: #E4405F"></i>
+                    <i class="fab fa-instagram platform-icon"></i>
                     <h3>Instagram Charity</h3>
                 </div>
                 <div class="progress-bar">
@@ -275,7 +329,7 @@
             <!-- TikTok Personal -->
             <div class="platform-card" id="tiktok-personal-status">
                 <div class="platform-header">
-                    <i class="fab fa-tiktok platform-icon" style="color: #000000"></i>
+                    <i class="fab fa-tiktok platform-icon"></i>
                     <h3>TikTok Personal</h3>
                 </div>
                 <div class="progress-bar">
@@ -287,7 +341,7 @@
             <!-- TikTok Charity -->
             <div class="platform-card" id="tiktok-charity-status">
                 <div class="platform-header">
-                    <i class="fab fa-tiktok platform-icon" style="color: #000000"></i>
+                    <i class="fab fa-tiktok platform-icon"></i>
                     <h3>TikTok Charity</h3>
                 </div>
                 <div class="progress-bar">
@@ -299,6 +353,7 @@
     </div>
 
     <script>
+        // JavaScript remains the same as before
         function updateFileName() {
             const fileInput = document.getElementById('video-file');
             const fileName = document.getElementById('file-name');
@@ -322,18 +377,15 @@
             const progressBar = document.getElementById(`${platformId}-progress`);
             const messageP = document.getElementById(`${platformId}-message`);
 
-            // Update progress bar
             progressBar.style.width = `${progress}%`;
             progressBar.className = `progress-fill ${status}`;
 
-            // Update message
             if (url) {
                 messageP.innerHTML = `${message} <a href="${url}" target="_blank" class="platform-link">View Post →</a>`;
             } else {
                 messageP.textContent = message;
             }
 
-            // Update card status
             card.className = `platform-card ${status}`;
         }
 
